a '!'.
Numbers in square brackets are sourceforge tracker IDs from
https://sourceforge.net/tracker/?group_id=66000&atid=513017

Numbers with # are CPANRT tracker IDs from
http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite

-----------------------------------------------------------------------
THIS RELEASE
-----------------------------------------------------------------------
0.710.11
   ! #45997: Inconsistency in SOAP::Serializer documentation
   ! #55618: HTTP_TRANSFER_ENCODING can be undefined in SOAP/Transpo
   ! [2946245] / #54106 Only last Cookie Set
   ! #50178: Win32 isuue with IO::SessionData and IO::SessionSet
   ! #41527: SOAP::Lite 0.69 with Apache2 HTTP Server module and mod_perl 2 
           returns 500 Internal 
0.710.10
   ! #49981: UDDI::Lite version not parsable by cpanplus (again)
0.710.09
   ! #46444: use SOAP::Lite::Deserializer::XMLSchemaSOAP1_2 missing
   ! #37151: Strawberry perl 5.10 - Tests fail and then later hang
   ! #49981: UDDI::Lite version not parsable by cpanplus
   ! #49011: Fails to install under strawberry perl
   ! [2825166] In Constant DEFAULT_HTTP_CONTENT_TYPE
   ! [2832939] chunked client requests are returned 411(Length Required) 
   ! [2860559] serious utf8 bug
   ! #44568 Tracing unavailable when SOAP::Lite is used as a server 
   ! #44195 submitting patches / mention Nginx transport module in documentation
   ! [2777361] SOAP 1.2 Content-Type rejected
   ! #41937 ([patch] enable more tests)
   ! #39101: Apache2::Const::HTTP_BAD_REQUEST not defined
   ! #39672: serialization and autotype 'off'
   ! #41348: t/SOAP/Transport/HTTP/CGI.t failing on 5.6.x
   ! #20569: XMLRPC::Lite "wrong element 'nil'" exception on '<value><nil/></value>'
   + require Task::Weaken
   + better META.yml generated (Alexandr Ciornii)

0.710.08 - Jul 13 2008
   ! [ 2015071 ] HTTP header is no more accessible
   The HTTP header can be pre-filled again. Now, the HTTP header is cloned